--- a/email_cron_content.html
+++ b/email_cron_content.html
@@ -8,9 +8,12 @@
   </head>
   <body class="body">
     <div class="main_body">
-      <h1 class="title">New Anime Release!</h1>
+      <h1 class="title">Today releases!</h1>
       <p>Dear User,</p>
-      <p><strong style="font-size: 20px">{anime_name}</strong> is out!</p>
+      <p></p>
+      <ul style="font-size: 20px">
+        {anime_list}
+      </ul>
       <p>Best regards,<br />The Anickal Team</p>
     </div>
   </body>
